--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,6 @@
 <header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+  <img src="./assets/images/ico-menu.svg" alt="Menu" />
+  <h1>anonimous proxy</h1>
+  <h2>In hac habitasse platea dictumst.</h2>
+  <button img src="./assets/images/ico-scroll-down.svg"></button>
 </header>
