--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,22 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer>
+  <button></button>
+  <img src="./assets/images/ico-arrow.svg" />
+  <nav>
+    <ul>
+      <li>Articles</li>
+      <li>Books</li>
+      <li>Events</li>
+      <li>Reasons</li>
+      <li>Tips</li>
+    </ul>
+  </nav>
+  <nav>
+    <ul>
+      <li>Twitter</li>
+      <li>Instagram</li>
+      <li>Mastodon.social</li>
+    </ul>
+  </nav>
+  <small> &copy; 2017</small>
+  <small>we ❤︎ components</small>
 </footer>
