Add img and links to header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,8 @@
 <header class="page__header">
-  <img src="./assets/images/ico-menu.svg" alt="Menu" />
+  <a href="https://adalab.es/"
+    ><img src="./assets/images/ico-menu.svg" alt="Menu"
+  /></a>
   <h1>anonimous proxy</h1>
   <h2>In hac habitasse platea dictumst.</h2>
-  <button img src="./assets/images/ico-scroll-down.svg"></button>
+  <a href="./reasons.html"><img src="./assets/images/ico-scroll-down.svg" /></a>
 </header>
