--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,5 @@
 <footer class="page__footer">
-  <button></button>
-  <img src="./assets/images/ico-arrow.svg" />
+  <a href="./header.html"><img src="./assets/images/ico-arrow.svg" /></a>
   <nav>
     <ul>
       <li>Articles</li>
