--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="page__header">
   <a href="https://adalab.es/"
-    ><img src="./assets/images/ico-menu.svg" alt="Menu"
+    ><img src="./assets/images/ico-menu.png" alt="Menu"
   /></a>
   <h1>anonimous proxy</h1>
   <h2>In hac habitasse platea dictumst.</h2>
