Add Sass to header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,7 @@
-<header class="page__header">
-  <a href="https://adalab.es/"
-    ><img src="./assets/images/ico-menu.png" alt="Menu"
-  /></a>
+<header class="header">
+  <div class="header__menu">
+    <a href="https://adalab.es/"
+      ><img src="./assets/images/ico-menu.png" alt="Menu"
+    /></a>
+  </div>
 </header>
