--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,9 @@
   height: 44px;
   margin: 0 0;
   background-color: $colormenu;
+  position: fixed;
+  top: 0;
+  left: 0;
   &__menu {
     width: 16px;
     height: 14px;
