Add partial header.scss and import to main.scss

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,14 @@
-.page__header {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+.header {
+  width: 44px;
+  height: 44px;
+  margin: 0 0;
+  background-color: $colormenu;
+  position: fixed;
+  top: 0;
+  left: 0;
+  &__menu {
+    width: 16px;
+    height: 14px;
+    padding: 15px 15px 15px 15px;
+  }
 }
