--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,7 @@
 // fonts
+$font-title: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap");
 
 // colors
 
 $colormenu: #0271bc;
+$pathImages: "./images/";
