--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,6 +1,11 @@
-<section class="cover">
-  <div class="cover__hero"></div>
-  <h1>anonimous proxy</h1>
-  <h2>In hac habitasse platea dictumst.</h2>
-  <a href="./reasons.html"><img src="./assets/images/ico-scroll-down.svg" /></a>
-</section>
+<hero id="hero" class="hero">
+      <h1 class="hero__title">anonimous proxy</h1>
+      <h2 class="hero__text">In hac habitasse platea dictumst.
+      </h2>
+    <div class="hero__buttom">
+      <a href="./reasons.html"
+        ><img src="./assets/images/ico-scroll-down.svg"
+      /></a>
+    </div>
+  </div>
+</hero>
