--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
 @import "core/variables";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap");
 @import "layout/header";
+@import "layout/cover";
