--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,11 +1,11 @@
-<hero id="hero" class="hero">
-      <h1 class="hero__title">anonimous proxy</h1>
-      <h2 class="hero__text">In hac habitasse platea dictumst.
-      </h2>
-    <div class="hero__buttom">
-      <a href="./reasons.html"
-        ><img src="./assets/images/ico-scroll-down.svg"
-      /></a>
-    </div>
-  </div>
-</hero>
+<section id="hero" class="hero">
+        <h1 class="hero__title">anonimous proxy</h1>
+        <h2 class="hero__text">In hac habitasse platea dictumst.
+        </h2>
+        <a href="./reasons.html" class="hero__buttom" title=
+        >
+          <img 
+             src="./assets/images/ico-scroll-down.svg" alt= class="hero__buttom--icon"
+        />
+      </a>
+</section>
