--- a/src/scss/layout/_cover.scss
+++ b/src/scss/layout/_cover.scss
@@ -2,14 +2,45 @@
   height: 100vh;
   background: url("../images/cover.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   &__title {
     color: #ffffff;
+    font-size: 42px;
+    flex-direction: column;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1.31;
+    letter-spacing: normal;
+    text-transform: uppercase;
+    margin-top: 284px;
   }
   &__text {
     color: #ffffff;
+    font-size: 16px;
+    flex-direction: column;
+    text-align: center;
+    margin: 10px 0 45px 15px;
+    font-weight: normal;
+  }
+  &__buttom {
+    width: 45px;
+    height: 45px;
+    margin-top: 45px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 45px;
+    margin-top: 45px;
+    background-color: white;
+  }
+  &__buttom--icon {
+    width: 20px;
+    height: 11.7px;
+    object-fit: contain;
   }
 }
