--- a/src/scss/layout/_cover.scss
+++ b/src/scss/layout/_cover.scss
@@ -10,17 +10,22 @@
   justify-content: center;
 
   &__title {
+    width: 100%;
+    height: auto;
     color: #ffffff;
     font-size: 42px;
+    word-spacing: 100vw;
     flex-direction: column;
     text-align: center;
     font-weight: bold;
-    line-height: 1.31;
     letter-spacing: normal;
     text-transform: uppercase;
     margin-top: 284px;
+    line-height: 55px;
   }
   &__text {
+    width: 100%;
+    height: auto;
     color: #ffffff;
     font-size: 16px;
     flex-direction: column;
@@ -32,7 +37,7 @@
     width: 45px;
     height: 45px;
     margin-top: 45px;
-    border-radius: 50%;
+    border-radius: 50px;
     text-align: center;
     line-height: 45px;
     margin-top: 45px;
