Add estructure to tips.html and sass to tips.scss

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap");
 @import "layout/header";
 @import "layout/cover";
+@import "layout/tips";
