--- a/src/html/partials/tips.html
+++ b/src/html/partials/tips.html
@@ -1,7 +1,11 @@
-<section>
-    <article>
-      Insomnia Tips Looking Through A Window Donec accumsan, nulla ut volutpat
-      porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
-      semper sodales rutrum. Go
-    </article>
+<section class="tips">
+  <h3 class="tips__title">Insomnia Tips</h3>
+  <article class="tips__article">
+    <h4 class="tips__article-title">Looking Through A Window</h4>
+    <p class="tips__article-text">
+      Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+      luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+    </p>
+    <div class="tips__buttom">Go</div>
+  </article>
 </section>
