--- a/src/html/partials/reasons.html
+++ b/src/html/partials/reasons.html
@@ -1,7 +1,32 @@
-<section>
-  <h2>3 Reasons To Purchase</h2>
-  <article>Ut sed metusLorem ipsum dolor sit amet, consecteur.</article>
-  Curabitur ac erat Mauris mattis urna quis lorem molestie. Morbi dictum Aliquam
-  in dolor et dolor tincidunt.
-  <p>More reasons</p>
+<section class="reasons" id="reasons">
+  <h2 class="reasons__title">3 Reasons To Purchase</h2>
+
+  <ul class="reasons__list">
+    <li class="reasons__list--item-1">
+      <article>
+        <h3 class="reasons__list--item-title">Ut sed metus</h3>
+        <p class="reasons__list--item-text">
+          Lorem ipsum dolor sit amet, consecteur.
+        </p>
+      </article>
+    </li>
+    <li class="reasons__list--item-2">
+      <article>
+        <h3 class="reasons__list--item-title">Curabitur ac erat</h3>
+        <p class="reasons__list--item-text">
+          Mauris mattis urna quis lorem molestie.
+        </p>
+      </article>
+    </li>
+    <li class="reasons__list--item-3">
+      <article>
+        <h3 class="reasons__list--item-title">Morbi dictum</h3>
+        <p class="reasons__list--item-text">
+          Aliquam in dolor et dolor tincidunt.
+        </p>
+      </article>
+    </li>
+  </ul>
+
+  <buttom class="reasons__buttom">More reasons</buttom>
 </section>
