Add sass to reasons.scss

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,3 +4,4 @@ $font-title: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;
 // colors
 
 $colormenu: #0271bc;
+$background-reasons: #eff9ff;
