--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,3 +5,5 @@ $font-title: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;
 
 $colormenu: #0271bc;
 $background-reasons: #eff9ff;
+$color-reasons-buttom: #f26002;
+$color-white-text: #ffffff;
