--- a/src/scss/layout/_reasons.scss
+++ b/src/scss/layout/_reasons.scss
@@ -1,6 +1,6 @@
 .reasons {
   width: 100%;
-  height: auto;
+  height: 550px;
   background-color: $background-reasons;
   text-align: center;
 
@@ -12,14 +12,15 @@
     text-align: center;
     font-weight: bold;
     text-transform: capitalize;
-    //padding-left: 20px;
+    padding-bottom: 40px;
   }
   &__list {
     list-style: none;
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 180px;
+    grid-template-rows: 130px 130px 130px;
+    padding-left: 70px;
   }
   &__list--item-title {
     width: 100%;
@@ -32,5 +33,22 @@
     font-size: 18px;
     font-weight: normal;
     line-height: 1.67;
+    text-indent: 10pt;
+  }
+  &__buttom {
+    //width: 184px;
+    //height: 120px;
+    background-color: $color-reasons-buttom;
+    border-radius: 200px;
+    text-align: center;
+    line-height: 45px;
+    padding-top: 15px;
+    padding-right: 40px;
+    padding-left: 40px;
+    padding-bottom: 15px;
+    //margin-bottom: 90px;
+    color: $color-white-text;
+    font-weight: bold;
+    word-spacing: 2pt;
   }
 }
