Add links to footer lists

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,19 +1,86 @@
-<footer class="page__footer">
-  <a href="./header.html"><img src="./assets/images/ico-arrow.svg" /></a>
+<footer class="footer">
+  <div class="footer__buttom" title="Back to top">
+    <a href="#header"><img src="./assets/images/ico-arrow.svg" /></a>
+  </div>
   <nav>
-    <ul>
-      <li>Articles</li>
-      <li>Books</li>
-      <li>Events</li>
-      <li>Reasons</li>
-      <li>Tips</li>
+    <ul class="footer__list">
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+        >
+          Articles</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Books</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Events</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Reasons</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Tips</a
+        >
+      </li>
     </ul>
   </nav>
   <nav>
-    <ul>
-      <li>Twitter</li>
-      <li>Instagram</li>
-      <li>Mastodon.social</li>
+    <ul class="footer__list">
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Twitter</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Instagram</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://adalab.es/"
+          title="Go to Adalab web"
+          class="footer__list--item"
+          target="_blank"
+          >Mastodon.social</a
+        >
+      </li>
     </ul>
   </nav>
   <small> &copy; 2021</small>
