--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -7,3 +7,4 @@ $colormenu: #0271bc;
 $background-reasons: #eff9ff;
 $color-reasons-buttom: #f26002;
 $color-white-text: #ffffff;
+$background-footer: #304268;
