--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
   <div class="header__menu">
     <a href="https://adalab.es/"
       ><img src="./assets/images/ico-menu.png" alt="Menu"
