--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -20,9 +20,17 @@
   &__list {
     list-style: none;
     color: $color-white-text;
+    line-height: 1.8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
   }
   &__list--item {
     text-decoration: none;
     color: $color-white-text;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: normal;
   }
 }
