Add style to footer smalls

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -83,6 +83,10 @@
       </li>
     </ul>
   </nav>
-  <small> &copy; 2021</small>
-  <small>we ❤︎ components</small>
+  <small class="footer__small-year"> &copy; 2021</small>
+  <small class="footer__small-we">
+    <span>we</span>
+    <span class="footer__small-heart">❤︎</span>
+    <span>components</span>
+  </small>
 </footer>
