--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -8,3 +8,4 @@ $background-reasons: #eff9ff;
 $color-reasons-buttom: #f26002;
 $color-white-text: #ffffff;
 $background-footer: #304268;
+$colorheart: #f26002;
