--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -33,4 +33,20 @@
     font-size: 16px;
     font-weight: normal;
   }
+  &__small-year {
+    color: $color-white-text;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+  }
+  &__small-we {
+    color: $color-white-text;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 5;
+    //padding-bottom: 50px;
+  }
+  &__small-heart {
+    color: $colorheart;
+  }
 }
