--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -43,8 +43,8 @@
     color: $color-white-text;
     font-size: 14px;
     font-weight: normal;
-    line-height: 5;
-    //padding-bottom: 50px;
+    line-height: 4;
+    margin-bottom: 20px;
   }
   &__small-heart {
     color: $colorheart;
