Add mediaqueries to tips.scss

--- a/src/html/partials/tips.html
+++ b/src/html/partials/tips.html
@@ -6,6 +6,8 @@
       Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
       luctus ex diam nec lectus. Vivamus semper sodales rutrum.
     </p>
-    <div class="tips__buttom">Go</div>
+    <div class="tips__buttom">
+      <p class="tips__buttom--link">Go</p>
+    </div>
   </article>
 </section>
