--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,6 +4,7 @@ $font-title: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;
 // colors
 
 $colormenu: #0271bc;
+$colorlightblue: #8ccbea;
 $background-reasons: #eff9ff;
 $color-reasons-buttom: #f26002;
 $color-white-text: #ffffff;
