--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -1,25 +1,60 @@
 .tips {
-  width: 320px;
-  height: 376px;
+  width: 100%;
   padding: 30px 15px 45px;
 
   &__title {
     height: 30px;
     margin-left: 15px;
+    color: $colorlightblue;
+    font-size: 14px;
+
+    @media (min-width: 780px) {
+      margin-left: 39px;
+    }
+
+    @media (min-width: 1200px) {
+      font-size: 16px;
+      margin-left: 275px;
+    }
   }
   &__article-title {
-    height: 60px;
+    //height: 60px;
     font-size: 24px;
     margin-left: 15px;
     margin-right: 15px;
+
+    @media (min-width: 780px) {
+      font-size: 26px;
+      line-height: 45px;
+      margin-right: 45px;
+      margin-left: 45px;
+    }
+    @media (min-width: 1200px) {
+      font-size: 32px;
+      line-height: 45px;
+      margin-right: 275px;
+      margin-left: 275px;
+    }
   }
   &__article-text {
     height: 120px;
     font-size: 18px;
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 20px;
     line-height: 1.67;
     letter-spacing: normal;
+
+    @media (min-width: 780px) {
+      font-size: 20px;
+      line-height: 30px;
+      margin-right: 100px;
+      margin-left: 39px;
+    }
+    @media (min-width: 1200px) {
+      margin-right: 450px;
+      margin-left: 275px;
+    }
   }
   &__buttom {
     border-radius: 22.5px;
@@ -28,7 +63,7 @@
     height: 45px;
     text-align: center;
     line-height: 40px;
-    margin-top: 30px;
+    //margin-top: 30px;
     margin-left: 15px;
     color: #f26002;
 
@@ -37,6 +72,20 @@
     &:hover {
       border: solid 5px;
       transform: scale(1.5);
+    }
+
+    @media (min-width: 780px) {
+      margin-left: 39px;
+      width: 91px;
+      margin-bottom: 30px;
+    }
+    @media (min-width: 1200px) {
+      margin-left: 275px;
+      width: 160px;
+      margin-bottom: 30px;
+    }
+    &--link {
+      font-weight: bold;
     }
   }
 }
