Add media to reasons buttom

--- a/src/html/partials/reasons.html
+++ b/src/html/partials/reasons.html
@@ -28,5 +28,7 @@
     </li>
   </ul>
 
-  <buttom class="reasons__buttom">More reasons</buttom>
+  <div>
+    <buttom class="reasons__buttom">More reasons</buttom>
+  </div>
 </section>
