--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,91 +2,93 @@
   <div class="footer__buttom" title="Back to top">
     <a href="#header"><img src="./assets/images/ico-arrow.svg" /></a>
   </div>
-  <nav>
-    <ul class="footer__list">
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-        >
-          Articles</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Books</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Events</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Reasons</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Tips</a
-        >
-      </li>
-    </ul>
-  </nav>
-  <nav>
-    <ul class="footer__list">
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Twitter</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Instagram</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://adalab.es/"
-          title="Go to Adalab web"
-          class="footer__list--item"
-          target="_blank"
-          >Mastodon.social</a
-        >
-      </li>
-    </ul>
-  </nav>
-  <small class="footer__small-year"> &copy; 2021</small>
-  <small class="footer__small-we">
-    <span>we</span>
-    <span class="footer__small-heart">❤︎</span>
-    <span>components</span>
-  </small>
+  <div class="footer__all">
+    <nav>
+      <ul class="footer__list">
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+          >
+            Articles</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Books</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Events</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Reasons</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Tips</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <nav>
+      <ul class="footer__list">
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://adalab.es/"
+            title="Go to Adalab web"
+            class="footer__list--item"
+            target="_blank"
+            >Mastodon.social</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <small class="footer__small-year"> &copy; 2021</small>
+    <small class="footer__small-we">
+      <span>we</span>
+      <span class="footer__small-heart">❤︎</span>
+      <span>components</span>
+    </small>
+  </div>
 </footer>
