Add changes to footer 768

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -54,7 +54,7 @@
       </ul>
     </nav>
     <nav>
-      <ul class="footer__list">
+      <ul class="footer__social">
         <li>
           <a
             href="https://adalab.es/"
@@ -84,11 +84,12 @@
         </li>
       </ul>
     </nav>
-    <small class="footer__small-year"> &copy; 2021</small>
-    <small class="footer__small-we">
-      <span>we</span>
-      <span class="footer__small-heart">❤︎</span>
-      <span>components</span>
-    </small>
+    <div class="footer__copy">
+      <small class="footer__small-year"> &copy; 2021</small>
+      <small class="footer__small-we">
+        <span>we</span>
+        <span class="footer__small-heart">❤︎</span>
+        <span>components</span>
+      </small>
   </div>
 </footer>
