--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -26,6 +26,15 @@
     align-items: center;
     padding-bottom: 40px;
   }
+  &__social {
+    list-style: none;
+    color: $color-white-text;
+    line-height: 1.8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
+  }
   &__list--item {
     text-decoration: none;
     color: $color-white-text;
@@ -53,13 +62,10 @@
 .footer__all {
   @media (min-width: 768px) {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     width: 90%;
     justify-content: space-between;
-
-    &__small-we {
-      order: 1;
-    }
+    padding-right: 120px;
   }
   @media (min-width: 1200px) {
     padding-left: 370px;
