Add variables and inner links in buttoms

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,10 +3,9 @@ $font-title: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;
 
 // colors
 
-$colormenu: #0271bc;
+$color-blue: #0271bc;
 $colorlightblue: #8ccbea;
 $background-reasons: #eff9ff;
-$color-reasons-buttom: #f26002;
-$color-white-text: #ffffff;
+$color-orange: #f26002;
+$color-white: #ffffff;
 $background-footer: #304268;
-$colorheart: #f26002;
