--- a/src/html/partials/cover.html
+++ b/src/html/partials/cover.html
@@ -2,7 +2,7 @@
         <h1 class="hero__title">anonimous proxy</h1>
         <h2 class="hero__text">In hac habitasse platea dictumst.
         </h2>
-        <a href="./reasons.html" class="hero__buttom" title=
+        <a href="#reasons" class="hero__buttom" title=
         >
           <img 
              src="./assets/images/ico-scroll-down.svg" alt= class="hero__buttom--icon"
