--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer__buttom" title="Back to top">
-    <a href="#header"><img src="./assets/images/ico-arrow.svg" /></a>
+    <a href="#hero" title="up"><img src="./assets/images/ico-arrow.svg" /></a>
   </div>
   <div class="footer__all">
     <nav>
