--- a/src/scss/layout/_cover.scss
+++ b/src/scss/layout/_cover.scss
@@ -12,7 +12,7 @@
   &__title {
     width: 100%;
     height: auto;
-    color: #ffffff;
+    color: $color-white;
     font-size: 42px;
     word-spacing: 100vw;
     flex-direction: column;
@@ -37,7 +37,7 @@
   &__text {
     width: 100%;
     height: auto;
-    color: #ffffff;
+    color: $color-white;
     font-size: 16px;
     flex-direction: column;
     text-align: center;
@@ -60,7 +60,7 @@
     text-align: center;
     line-height: 45px;
     margin-top: 45px;
-    background-color: white;
+    background-color: $color-white;
   }
   &__buttom--icon {
     width: 20px;
