--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -12,14 +12,16 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: $color-white-text;
-    text-align: center;
+    background-color: $color-white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     line-height: 60px;
     transform: translate(0, -50%);
   }
   &__list {
     list-style: none;
-    color: $color-white-text;
+    color: $color-white;
     line-height: 1.8;
     display: flex;
     flex-direction: column;
@@ -28,7 +30,7 @@
   }
   &__social {
     list-style: none;
-    color: $color-white-text;
+    color: $color-white;
     line-height: 1.8;
     display: flex;
     flex-direction: column;
@@ -37,26 +39,26 @@
   }
   &__list--item {
     text-decoration: none;
-    color: $color-white-text;
+    color: $color-white;
     text-transform: uppercase;
     font-size: 16px;
     font-weight: normal;
   }
   &__small-year {
-    color: $color-white-text;
+    color: $color-white;
     font-size: 14px;
     font-weight: normal;
     line-height: 1;
   }
   &__small-we {
-    color: $color-white-text;
+    color: $color-white;
     font-size: 14px;
     font-weight: normal;
     line-height: 4;
     margin-bottom: 20px;
   }
   &__small-heart {
-    color: $colorheart;
+    color: $color-orange;
   }
 }
 .footer__all {
