--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,7 @@
   width: 44px;
   height: 44px;
   margin: 0 0;
-  background-color: $colormenu;
+  background-color: $color-blue;
   position: fixed;
   top: 0;
   left: 0;
