--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -65,7 +65,7 @@
     line-height: 40px;
     //margin-top: 30px;
     margin-left: 15px;
-    color: #f26002;
+    color: $color-orange;
 
     transition: transform 1.5s 0s ease-in;
 
