--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 }
 
 @import "core/variables";
+@import "core/reset";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap");
 @import "layout/header";
 @import "layout/cover";
