--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -18,6 +18,10 @@
     align-items: center;
     line-height: 60px;
     transform: translate(0, -50%);
+    animation-duration: 5s;
+    animation-name: intro;
+    animation-iteration-count: 5;
+    animation-timing-function: linear;
   }
   &__list {
     list-style: none;
@@ -73,5 +77,17 @@
     padding-left: 370px;
     padding-right: 370px;
     justify-content: space-around;
+  }
+}
+@keyframes intro {
+  from {
+    transform: scale(10) rotate(-150deg);
+    opacity: 0;
+    color: $color-white;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 1;
   }
 }
