--- a/src/scss/layout/_reasons.scss
+++ b/src/scss/layout/_reasons.scss
@@ -1,6 +1,6 @@
 .reasons {
   width: 100%;
-  height: 550px;
+  height: 600px;
   background-color: $background-reasons;
   text-align: center;
 
@@ -11,6 +11,7 @@
   &__title {
     width: 100%;
     height: auto;
+    padding-top: 30px;
     font-size: 24px;
     line-height: 1.25;
     text-align: center;
