--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -8,7 +8,7 @@
     color: $colorlightblue;
     font-size: 14px;
 
-    @media (min-width: 780px) {
+    @media (min-width: 768px) {
       margin-left: 39px;
     }
 
@@ -22,8 +22,10 @@
     font-size: 24px;
     margin-left: 15px;
     margin-right: 15px;
+    line-height: 1.25;
+    font-weight: bold;
 
-    @media (min-width: 780px) {
+    @media (min-width: 768px) {
       font-size: 26px;
       line-height: 45px;
       margin-right: 45px;
@@ -39,13 +41,12 @@
   &__article-text {
     height: 120px;
     font-size: 18px;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 20px;
+    margin: 10px 15px 20px 15px;
     line-height: 1.67;
     letter-spacing: normal;
+    color: $color-grey;
 
-    @media (min-width: 780px) {
+    @media (min-width: 768px) {
       font-size: 20px;
       line-height: 30px;
       margin-right: 100px;
@@ -65,6 +66,7 @@
     line-height: 40px;
     //margin-top: 30px;
     margin-left: 15px;
+    margin-top: 40px;
     color: $color-orange;
 
     transition: transform 1.5s 0s ease-in;
@@ -74,7 +76,7 @@
       transform: scale(1.5);
     }
 
-    @media (min-width: 780px) {
+    @media (min-width: 768px) {
       margin-left: 39px;
       width: 91px;
       margin-bottom: 30px;
