--- a/src/scss/layout/_reasons.scss
+++ b/src/scss/layout/_reasons.scss
@@ -47,8 +47,8 @@
     }
     @media (min-width: 1200px) {
       grid-gap: 100px;
-      //margin-right: 200px;
-      margin-left: 100px;
+      margin-right: 200px;
+      margin-left: 300px;
       grid-template-columns: 310px 310px 310px;
     }
   }
