--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -1,6 +1,9 @@
 .tips {
   width: 100%;
   padding: 30px 15px 45px;
+  @media (min-width: 1200px) {
+    margin-left: 150px;
+  }
 
   &__title {
     height: 30px;
