--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="header__menu">
     <a href="https://adalab.es/"
-      ><img src="./assets/images/ico-menu.png" alt="Menu"
+      ><img src="./assets/images/ico-menu.png" alt="Menu" title="menu"
     /></a>
   </div>
 </header>
