--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -3,7 +3,7 @@
     <a href="#hero" ><img src="./assets/images/ico-arrow.svg" title="up" /></a>
   </div>
   <div class="footer__all">
-    <nav>
+    <nav class="footer__nav nav-1">
       <ul class="footer__list">
         <li>
           <a
@@ -53,7 +53,7 @@
         </li>
       </ul>
     </nav>
-    <nav>
+    <nav class="footer__nav nav-2">
       <ul class="footer__social">
         <li>
           <a
