add technical interview

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,6 @@
 @import "layout/header";
 @import "layout/cover";
 @import "layout/tips";
+@import "layout/section-pricing";
 @import "layout/reasons";
 @import "layout/footer";
