add changes to cover

--- a/src/html/partials/cover.html
+++ b/src/html/partials/cover.html
@@ -1,12 +1,7 @@
 <section id="hero" class="hero">
-  <h1 class="hero__title">anonimous proxy</h1>
-  <h2 class="hero__text">In hac habitasse platea dictumst.</h2>
+  <h1 class="hero__title">glamping al-ándalus</h1>
+  <h2 class="hero__text">Live your "ateepeecal" experience</h2>
   <a href="#reasons" class="hero__buttom">
-    <img
-      src="./assets/images/ico-scroll-down.svg"
-      alt="class"
-      ="hero__buttom--icon"
-      title="down"
-    />
+    <img src="./assets/images/ico-scroll-down.svg" alt="class"="hero__buttom--icon" title="down" />
   </a>
 </section>
