add changes to main partial

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,5 @@
 <header class="header" id="header">
-  <div class="header__menu">
-    <a href="https://adalab.es/"
-      ><img src="./assets/images/ico-menu.png" alt="Menu" title="menu"
-    /></a>
-  </div>
+  <a class="header__menu" target="blank" href="https://adalab.es/" title="Menu">
+    <img class="header__menu--icon" src="./assets/images/ico-menu.png" alt="Menu" title="menu" />
+  </a>
 </header>
