--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,14 +1,20 @@
 .header {
-  width: 44px;
-  height: 44px;
-  margin: 0 0;
-  background-color: $color-blue;
-  position: fixed;
-  top: 0;
-  left: 0;
   &__menu {
-    width: 16px;
-    height: 14px;
-    padding: 15px 15px 15px 15px;
+    width: 44px;
+    height: 44px;
+    margin: 0 0;
+    background-color: $color-blue;
+    position: fixed;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+
+    &--icon {
+      // width: 16px;
+      // height: 14px;
+      // display: block;
+      // transform: translate(100%, 100%);
+      padding: 15px 15px 15px 15px;
+    }
   }
 }
