--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,14 @@
-//* {
-//margin: 0;
-//padding: 0;
-//box-sizing: border-box;
-//}
+//CORE
 
 @import "core/variables";
 @import "core/reset";
+@import "core/mixins";
+@import "core/commons";
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap");
+
+//LAYOUT
+
 @import "layout/header";
 @import "layout/cover";
 @import "layout/tips";
