--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,7 @@
 //LAYOUT
 
 @import "layout/header";
-@import "layout/cover";
+@import "layout/hero";
 @import "layout/tips";
 @import "layout/reasons";
 @import "layout/footer";
