--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -1,9 +1,4 @@
-.link__adalab:hover {
-  background-color: #099d8d;
-  color: #fff;
-}
-
 .link__github:hover {
-  background-color: #CCC;
+  background-color: #ccc;
   color: #000;
 }
