--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -1,94 +1,84 @@
 .tips {
-  width: 100%;
-  padding: 30px 15px 45px;
-  @media (min-width: 1200px) {
-    padding-left: 150px;
+  padding: 30px 15px 45px 15px;
+  margin: auto;
+
+  @include tablet {
+    padding: 30px 39px 60px 39px;
+  }
+  @include desktop {
+    padding: 60px 275px 60px 275px;
   }
 
   &__title {
     height: 30px;
-    margin-left: 15px;
     color: $colorlightblue;
     font-size: 14px;
 
-    @media (min-width: 768px) {
-      margin-left: 39px;
-    }
-
-    @media (min-width: 1200px) {
+    @include desktop {
       font-size: 16px;
-      margin-left: 275px;
     }
   }
-  &__article-title {
-    //height: 60px;
+  &__article--title {
     font-size: 24px;
     margin-left: 15px;
     margin-right: 15px;
     line-height: 1.25;
     font-weight: bold;
 
-    @media (min-width: 768px) {
+    @include tablet {
       font-size: 26px;
       line-height: 45px;
-      margin-right: 45px;
-      margin-left: 45px;
+      // margin-right: 45px;
+      // margin-left: 45px;
     }
-    @media (min-width: 1200px) {
+    @include desktop {
       font-size: 32px;
       line-height: 45px;
-      margin-right: 275px;
-      margin-left: 275px;
+      // margin-right: 275px;
+      // margin-left: 275px;
     }
   }
-  &__article-text {
-    height: 120px;
+  &__article--text {
+    height: 180px;
     font-size: 18px;
     margin: 10px 15px 20px 15px;
     line-height: 1.67;
     letter-spacing: normal;
     color: $color-grey;
 
-    @media (min-width: 768px) {
+    @include tablet {
       font-size: 20px;
-      line-height: 30px;
-      padding-right: 100px;
-      padding-left: 39px;
-    }
-    @media (min-width: 1200px) {
-      padding-right: 270px;
-      padding-left: 260px;
-      padding-top: 20px;
     }
   }
   &__buttom {
-    border-radius: 22.5px;
-    border: solid 2px;
+    background-color: transparent;
+    appearance: none;
+    border: 2px solid #e74c3c;
+    border-radius: 0.6em;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    // padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 2.5rem;
     width: 76px;
     height: 45px;
-    text-align: center;
-    line-height: 40px;
-    //margin-top: 30px;
-    margin-left: 15px;
-    margin-top: 40px;
-    color: $color-orange;
-
-    transition: transform 1.5s 0s ease-in;
+    // margin-left: 15px;
+    color: $color-blue;
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 
     &:hover {
       border: solid 5px;
-      transform: scale(1.5);
+      box-shadow: 0 0 40px 40px #e74c3c inset;
     }
 
-    @media (min-width: 768px) {
-      margin-left: 39px;
+    @include tablet {
       width: 91px;
-      margin-bottom: 10px;
     }
-    @media (min-width: 1200px) {
-      margin-left: 275px;
+    @include desktop {
       width: 160px;
-      margin-bottom: 30px;
     }
     &--link {
       font-weight: bold;
