--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,86 +1,40 @@
 <footer class="footer">
   <div class="footer__buttom" title="Back to top">
-    <a href="#hero" ><img src="./assets/images/ico-arrow.svg" title="up" /></a>
+    <a href="#hero"><img src="./assets/images/ico-arrow.svg" title="up" /></a>
   </div>
   <div class="footer__all">
     <nav class="footer__nav nav-1">
       <ul class="footer__list">
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-          >
-            Articles</a
-          >
+          <a href="https://adalab.es/" title="Go to Adalab web" class="footer__list--item" target="_blank">Articles</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Books</a
-          >
+          <a href="https://adalab.es/" title="Go to Adalab web" class="footer__list--item" target="_blank">Books</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Events</a
-          >
+          <a href="https://adalab.es/" title="Go to Adalab web" class="footer__list--item" target="_blank">Events</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Reasons</a
-          >
+          <a href="https://adalab.es/" title="Go to Adalab web" class="footer__list--item" target="_blank">Reasons</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Tips</a
-          >
+          <a href="https://adalab.es/" title="Go to Adalab web" class="footer__list--item" target="_blank">Tips</a>
         </li>
       </ul>
     </nav>
     <nav class="footer__nav nav-2">
       <ul class="footer__social">
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Twitter</a
-          >
+          <a href="https://www.linkedin.com/in/lorenaorellana/" title="Go to Linkedin" class="footer__list--item"
+            target="_blank">Linkedin</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Instagram</a
-          >
+          <a href="https://drive.google.com/file/d/1pDTttYRXkHzcOu7CXXKOkbrwL_9L4hTD/view?usp=sharing"
+            title="Go to CV Lorena Orellana" class="footer__list--item" target="_blank">CV Frontend</a>
         </li>
         <li>
-          <a
-            href="https://adalab.es/"
-            title="Go to Adalab web"
-            class="footer__list--item"
-            target="_blank"
-            >Mastodon.social</a
-          >
+          <a href="https://github.com/Lorellana21" title="Go to GitHub" class="footer__list--item"
+            target="_blank">GitHub</a>
         </li>
       </ul>
     </nav>
@@ -89,7 +43,7 @@
       <small class="footer__small-we">
         <span>we</span>
         <span class="footer__small-heart">❤︎</span>
-        <span>components</span>
+        <span>glampings</span>
       </small>
-  </div>
+    </div>
 </footer>
