--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -9,5 +9,5 @@ $colorlightblue: #8ccbea;
 $background-reasons: #eff9ff;
 $color-orange: #f26002;
 $color-white: #ffffff;
-$background-footer: #304268;
+$background-footer: rgb(73, 112, 197);
 $color-grey: #4a4a4a;
