--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -53,7 +53,7 @@
   &__buttom {
     background-color: transparent;
     appearance: none;
-    border: 2px solid #e74c3c;
+    border: 2px solid $background-footer;
     border-radius: 0.6em;
     cursor: pointer;
     font-size: 1rem;
@@ -66,7 +66,7 @@
     width: 76px;
     height: 45px;
     // margin-left: 15px;
-    color: $color-blue;
+    color: $background-footer;
     transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 
     &:hover {
