add central-column to tips

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,9 @@
 //LAYOUT
 
 @import "layout/header";
+
 @import "layout/hero";
+@import "layout/central-column";
 @import "layout/tips";
 @import "layout/reasons";
 @import "layout/footer";
