--- a/src/scss/layout/_tips.scss
+++ b/src/scss/layout/_tips.scss
@@ -1,13 +1,5 @@
 .tips {
   padding: 30px 15px 45px 15px;
-  margin: auto;
-
-  @include tablet {
-    padding: 30px 39px 60px 39px;
-  }
-  @include desktop {
-    padding: 60px 275px 60px 275px;
-  }
 
   &__title {
     height: 30px;
@@ -20,28 +12,22 @@
   }
   &__article--title {
     font-size: 24px;
-    margin-left: 15px;
-    margin-right: 15px;
     line-height: 1.25;
     font-weight: bold;
+    margin-bottom: 10px;
 
     @include tablet {
       font-size: 26px;
       line-height: 45px;
-      // margin-right: 45px;
-      // margin-left: 45px;
     }
     @include desktop {
       font-size: 32px;
       line-height: 45px;
-      // margin-right: 275px;
-      // margin-left: 275px;
     }
   }
   &__article--text {
-    height: 180px;
+    // height: 180px;
     font-size: 18px;
-    margin: 10px 15px 20px 15px;
     line-height: 1.67;
     letter-spacing: normal;
     color: $color-grey;
@@ -51,6 +37,7 @@
     }
   }
   &__buttom {
+    margin-top: 30px;
     background-color: transparent;
     appearance: none;
     border: 2px solid $background-footer;
@@ -58,14 +45,12 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: 400;
-    // padding: 1.2em 2.8em;
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
     line-height: 2.5rem;
     width: 76px;
     height: 45px;
-    // margin-left: 15px;
     color: $background-footer;
     transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 
