add dossier link

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -29,8 +29,8 @@
             target="_blank">Linkedin</a>
         </li>
         <li>
-          <a href="https://drive.google.com/file/d/1pDTttYRXkHzcOu7CXXKOkbrwL_9L4hTD/view?usp=sharing"
-            title="Go to CV Lorena Orellana" class="footer__list--item" target="_blank">CV Frontend</a>
+          <a href="https://drive.google.com/file/d/1aZDTqxqSGxsKRMHq3Xv-EAsZd2qn_t4Q/view?usp=sharing"
+            title="Go to CV Lorena Orellana" class="footer__list--item" target="_blank">Dossier</a>
         </li>
         <li>
           <a href="https://github.com/Lorellana21" title="Go to GitHub" class="footer__list--item"
