--- a/src/scss/layout/_central-column.scss
+++ b/src/scss/layout/_central-column.scss
@@ -1,6 +1,6 @@
 .central-column {
     margin: 0 auto;
-    background: rgba(200, 200, 200, 0.5);
+    // background: rgba(200, 200, 200, 0.5);
     max-width: 500px;
     @include tablet {
         max-width: 700px;
