--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,45 +1,48 @@
 .footer {
-  width: 100vw;
-  height: auto;
   background-color: $background-footer;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px;
+
+  &__all {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
+    @include desktop {
+      justify-content: space-evenly;
+    }
+  }
 
   &__buttom {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: $color-white;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: 60px;
     transform: translate(0, -50%);
-    animation-duration: 5s;
-    animation-name: intro;
-    animation-iteration-count: 5;
-    animation-timing-function: linear;
   }
   &__list {
     list-style: none;
     color: $color-white;
     line-height: 1.8;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
     padding-bottom: 40px;
+    @include tablet {
+      text-align: left;
+    }
   }
   &__social {
     list-style: none;
     color: $color-white;
     line-height: 1.8;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
     padding-bottom: 40px;
+    @include tablet {
+      // align-items: flex-start;
+      text-align: left;
+    }
   }
   &__list--item {
     text-decoration: none;
@@ -52,7 +55,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include tablet {
+      order: 1;
+      align-items: flex-start;
+    }
   }
+
   &__small-year {
     color: $color-white;
     font-size: 14px;
@@ -71,38 +79,12 @@
   }
 }
 
-@media (min-width: 768px) {
-  .footer__all {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    justify-content: space-between;
-  }
+@include tablet {
   .nav-1 {
     order: 2;
   }
   .nav-2 {
     order: 3;
-  }
-  .footer__list {
-    align-items: flex-start;
-  }
-  .footer__social {
-    align-items: flex-start;
-  }
-  .footer__copy {
-    order: 1;
-    align-items: flex-start;
-  }
-}
-
-@media (min-width: 1200px) {
-  .footer__all {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    justify-content: space-evenly;
-    padding-left: 200px;
   }
 }
 
